[package]
name = "to_do"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0.0"
anyhow = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }